manifests/production/apps/actual/apps_v1_deployment_actual-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: application
    app.kubernetes.io/instance: actual
    app.kubernetes.io/name: actual-server
    app.kubernetes.io/part-of: actual
  name: actual-server
  namespace: actual
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: application
      app.kubernetes.io/instance: actual
      app.kubernetes.io/name: actual-server
      app.kubernetes.io/part-of: actual
  template:
    metadata:
      labels:
        app.kubernetes.io/component: application
        app.kubernetes.io/instance: actual
        app.kubernetes.io/name: actual-server
        app.kubernetes.io/part-of: actual
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
                app.kubernetes.io/component: application
                app.kubernetes.io/instance: actual
                app.kubernetes.io/name: actual-server
                app.kubernetes.io/part-of: actual
            topologyKey: kubernetes.io/hostname
      containers:
      - envFrom:
        - configMapRef:
            name: actual-server-env-659mc2tgtm
        - secretRef:
            name: actual-server-env
        image: ghcr.io/actualbudget/actual-server:25.9.0@sha256:a96e38821a56843a5473204cbd3773ffee816c49c23e0a9187fb80498bd3e154
        name: actual-server
        ports:
        - containerPort: 5006
          protocol: TCP
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        volumeMounts:
        - mountPath: /data
          name: data
        - mountPath: /data/config.json
          name: config
          subPath: config.json
      securityContext:
        fsGroup: 1001
        runAsGroup: 1001
        runAsNonRoot: true
        runAsUser: 1001
        seccompProfile:
          type: RuntimeDefault
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: actual-server-data
      - name: config
        secret:
          secretName: actual-server-config
